#215 Added publicationComponents to homepage, fixed word-wrap in them, fixed image and headers styles.

--- a/rnacentral/portal/static/css/main.css
+++ b/rnacentral/portal/static/css/main.css
@@ -904,6 +904,10 @@ textarea {
   opacity: 0;
 }
 
+.abstract-text {
+  word-wrap: break-word;
+}
+
 /* Transitions for abstract-text */
 
 .abstract-text.slide-down.ng-enter {
